src/objects/Opportunity_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Champion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Champion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Opportunity_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Level_Of_Advocacy__c</fullName>
        <label>Level Of Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>+3 Vocal proponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2 Moderate Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1 Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1 Uninterested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2 Resistor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-3 Vocal Detractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_Of_Influence__c</fullName>
        <label>Level Of Influence</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <inlineHelpText>Growth
Trouble
Even Keel
Over Confident</inlineHelpText>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trouble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even Keel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Confident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Interests__c</fullName>
        <label>Stakeholder Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Name__c</fullName>
        <formula>Contact__r.LastName  &amp; &apos;,&apos;  &amp;  Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stakeholder Name</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Stakeholder</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stakeholders</pluralLabel>
    <recordTypes>
        <fullName>Capital_Opportunity_Contact</fullName>
        <active>true</active>
        <label>Capital Opportunity Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Contact</fullName>
        <active>true</active>
        <label>Opportunity Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>